--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:H2oPT89TNNmvtLIXoFyCf2gasmfjxVpJa8dDHO5pWwY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
